--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,12 +6,15 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-regex = "1.11.2"
-serde = { version = "1.0.219", features = ["derive", "rc"] }
-minijinja = "2.12.0"
-thiserror = "2.0.16"
+async-trait = "0.1.89"
+glob = "0.3.3"
+regex = "1.12.2"
+serde = { version = "1.0.228", features = ["derive", "rc"] }
+thiserror = "2.0.17"
+tokio = { version = "1.48.0", features = ["rt"] }
 
 [dev-dependencies]
-proptest = "1.7.0"
+proptest = "1.9.0"
 rstest = "0.26.1"
-tempfile = "3.21.0"
+tempfile = "3.23.0"
+tokio = { version = "1.48.0", features = ["full"] }
