Added missing files before getting ready to deploy

--- a/bindings/python/Cargo.toml
+++ b/bindings/python/Cargo.toml
@@ -1,7 +1,9 @@
 [package]
 name = "pyopenpathresolver"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
+repository = "https://github.com/scott-wilson/openpathresolver/"
+license = "MIT OR Apache-2.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
