--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,20 @@
 [package]
 name = "openpathresolver"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
+description = "A simple path resolution framework"
+repository = "https://github.com/scott-wilson/openpathresolver"
+license = "MIT OR Apache-2.0"
+keywords = ["path", "pipeline", "workspace"]
+include = [
+  "/CHANGELOG.md",
+  "/Cargo.toml",
+  "/LICENSE-APACHE",
+  "/LICENSE-MIT",
+  "/README.md",
+  "/SECURITY.md",
+  "/src/**/*.rs",
+]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
