--- a/.github/workflows/test_suite_rust.yml
+++ b/.github/workflows/test_suite_rust.yml
@@ -56,12 +56,9 @@ jobs:
         if: ${{ matrix.os == 'ubuntu-latest' }}
       - name: Generate coverage report from Rust tests
         run: cargo llvm-cov --all-features --lcov --output-path lcov.info
-      - name: Run examples
-        run: |
-          cargo run --example async_auto_fix
-          cargo run --example async_check
-          cargo run --example auto_fix
-          cargo run --example check
+      # - name: Run examples
+      #   run: |
+      #     cargo run --example todo
       - name: Run doc tests
         run: cargo test --doc
       - uses: codecov/codecov-action@671740ac38dd9b0130fbe1cec585b89eea48d3de # v5.5.2
