--- a/.github/workflows/test_suite_python.yml
+++ b/.github/workflows/test_suite_python.yml
@@ -80,7 +80,7 @@ jobs:
         with:
           python-version: ${{matrix.python-version.version}}
           freethreaded: ${{matrix.python-version.freethreaded}}
-          cache: 'pip'
+          cache: "pip"
       - name: Install dependencies
         run: python -m pip install .[test,docs]
       - name: Lint with Ruff
@@ -92,7 +92,7 @@ jobs:
       - name: Build Rust
         uses: PyO3/maturin-action@86b9d133d34bc1b40018696f782949dac11bd380 # v1.49.4
         with:
-          sccache: 'true'
+          sccache: "true"
           manylinux: auto
           working-directory: bindings/python
       - name: Prepare tests
@@ -101,12 +101,9 @@ jobs:
       - name: Run tests
         run: |
           python -m pytest --hypothesis-profile default -n=auto tests/
-      - name: Run examples
-        run: |
-          python examples/async_auto_fix.py
-          python examples/async_check.py
-          python examples/auto_fix.py
-          python examples/check.py
+      # - name: Run examples
+      #   run: |
+      #     python examples/todo.py
       - name: Run doc tests
         run: |
           python -m sphinx -b=doctest docs/source docs/build
